# linux-vpn-2017-autumn

./: .gitmodules  README.md  protocol_specs.md
VPNClient/app/: CMakeLists.txt  app-release.apk  build.gradle
VPNClient/app/release/: app-release.apk  output.json
VPNClient/app/src/main/: AndroidManifest.xml
VPNClient/app/src/main/res/animator/: ic_color_locked_at_start.xml  ic_color_try_lock.xml  ic_color_unlocked_at_start.xml  ic_greencolor_animator.xml  ic_lock_animator.xml  ic_locked_at_start.xml  ic_redcolor_animator.xml  ic_unlock_animator.xml  ic_unlocked_at_start.xml
VPNClient/app/src/main/res/drawable/: animated_lock.xml  animated_unlock.xml  green_lock.xml  ic_flag_of_the_united_states.xml  ic_flag_of_ukraine.xml  lock.xml  lock_locked.xml  lock_opened.xml  locked_at_start.xml  orange_lock.xml  try_lock.xml  unlocked_at_start.xml
VPNClient/app/src/main/res/layout-v19/: form.xml
VPNClient/gradle/wrapper/: gradle-wrapper.properties
VPN_Server/: VPN_Server.pro  VPN_Server.pro.user.7a5fc98  VPN_Server.pro.user.d61adde
VPN_Server/certs/: ca_cert.crt  server-cert.pem  server-key.pem
VPN_Server/debpackage/: apriorit-vpnservice_1.0-1_amd64.deb
VPN_Server/src/: CMakeLists.txt  client_parameters.hpp  connection.hpp  ip_manager.cpp  ip_manager.hpp  log.hpp  main.cpp  tunnel.cpp  tunnel.hpp  tunnel_mgr.cpp  tunnel_mgr.hpp  vpn_server.cpp  vpn_server.hpp
VPN_Server/src/utils/: utils.cpp  utils.hpp
VPN_Server_tests/: .gitignore  VPN_Server_tests.pro  main
VPN_Server_tests/src/: ip_manager_test.hpp  main.cpp  tunnel_mgr_test.hpp  vpn_server_test.hpp
(+32 files in other folders)
